--- a/README.html
+++ b/README.html
@@ -29,21 +29,7 @@
         <div class="header">
             <p>CS/COE 1520 – Programming Languages for Web Applications </p>
         </div>
-        <div class="slides">
-            <section class="title-slide" data-background-color="#1c2957">
-                <div class="title-content">
-                    <h1>CS/COE 1520</h1>
-                    <h4>Authentication</h4>
-                    <div class="speakers ">
-                        <h6> Rebecca Makar</h6>
-                    </div>
-                    <div class="address ">
-                        <p>University of Pittsburgh</p>
-                        <p>Room CL G 24</p>
-                        <p>T/TH 6:00 - 7:15</p>
-                    </div>
-                </div>
-            </section>
+        div class="slides">
             <section data-markdown="README.md">
             </section>
         </div>
