--- a/README.html
+++ b/README.html
@@ -29,7 +29,7 @@
         <div class="header">
             <p>CS/COE 1520 – Programming Languages for Web Applications </p>
         </div>
-        <div class="slides">
+        <div class="container">
             <section data-markdown="README.md">
             </section>
         </div>
